Undo z-index fix

--- a/docs/src/scss/ds.scss
+++ b/docs/src/scss/ds.scss
@@ -201,6 +201,7 @@ h6 {
 
   &__items {
     position: absolute;
+    z-index: 2;
   }
 
 }
